More refinements after the ODSC tutorial

--- a/ray-core/02-TaskParallelism-Part1.ipynb
+++ b/ray-core/02-TaskParallelism-Part1.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n:  2, duration:  2.004 seconds\n"
+      "n:  2, duration:  2.003 seconds\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,11 +124,11 @@
      "output_type": "stream",
      "text": [
       "n:  0, duration:  0.000 seconds\n",
-      "n:  1, duration:  1.003 seconds\n",
-      "n:  2, duration:  2.001 seconds\n",
-      "n:  3, duration:  3.002 seconds\n",
-      "n:  4, duration:  4.005 seconds\n",
-      "Total time: duration: 10.012 seconds\n"
+      "n:  1, duration:  1.004 seconds\n",
+      "n:  2, duration:  2.005 seconds\n",
+      "n:  3, duration:  3.004 seconds\n",
+      "n:  4, duration:  4.004 seconds\n",
+      "Total time: duration: 10.018 seconds\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,24 +182,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-11 12:00:03,746\tINFO resource_spec.py:212 -- Starting Ray with 4.64 GiB memory available for workers and up to 2.34 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-04-11 12:00:04,262\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8265\u001b[39m\u001b[22m\n"
+      "2020-04-14 10:28:48,870\tERROR worker.py:682 -- Calling ray.init() again after it has already been called.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:60670',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/raylet',\n",
-       " 'webui_url': 'localhost:8265',\n",
-       " 'session_dir': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532'}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -240,6 +224,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'localhost:8265'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ray.get_webui_url()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectID(45b95b1c8bd3a9c4ffffffff010000c801000000)"
+       "ObjectID(ef0a6c221819881cffffffff010000c801000000)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -287,11 +291,11 @@
      "output_type": "stream",
      "text": [
       "n:  0, duration:  0.000 seconds\n",
-      "n:  1, duration:  1.003 seconds\n",
-      "n:  2, duration:  2.001 seconds\n",
+      "n:  1, duration:  1.005 seconds\n",
+      "n:  2, duration:  2.004 seconds\n",
       "n:  3, duration:  3.004 seconds\n",
       "n:  4, duration:  4.004 seconds\n",
-      "Total time: duration: 10.029 seconds\n"
+      "Total time: duration: 10.028 seconds\n"
      ]
     }
    ],
@@ -317,25 +321,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n:  0, duration:  0.002 seconds\n",
-      "n:  1, duration:  0.003 seconds\n",
-      "n:  2, duration:  0.004 seconds\n",
-      "n:  3, duration:  0.005 seconds\n",
-      "n:  4, duration:  0.009 seconds\n",
+      "n:  0, duration:  0.001 seconds\n",
+      "n:  1, duration:  0.001 seconds\n",
+      "n:  2, duration:  0.002 seconds\n",
+      "n:  3, duration:  0.002 seconds\n",
+      "n:  4, duration:  0.003 seconds\n",
       "Calling ray.get:\n",
       "n:  0, duration:  0.000 seconds\n",
-      "n:  1, duration:  1.004 seconds\n",
-      "n:  2, duration:  2.002 seconds\n",
-      "n:  3, duration:  3.001 seconds\n",
-      "n:  4, duration:  4.002 seconds\n",
-      "Total time: duration:  4.015 seconds\n"
+      "n:  1, duration:  1.003 seconds\n",
+      "n:  2, duration:  2.004 seconds\n",
+      "n:  3, duration:  3.004 seconds\n",
+      "n:  4, duration:  4.005 seconds\n",
+      "Total time: duration:  4.009 seconds\n"
      ]
     }
    ],
@@ -410,10 +414,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "@ray.remote\n",
     "def slow_square(n):\n",
     "    time.sleep(n)\n",
     "    return n*n"
@@ -421,32 +426,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "start = time.time()\n",
-    "squares = [slow_square(n) for n in range(4)]\n",
+    "squares_id = [slow_square.remote(n) for n in range(4)]\n",
+    "squares = ray.get(squares_id)\n",
     "duration = time.time() - start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Did you exploit Ray parallelism? The duration is too long: 6.006669759750366 seconds",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-192e039ff7d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0msquares\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Did you retrieve the objects using the ids? squares = {squares}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mduration\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m4.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Did you exploit Ray parallelism? The duration is too long: {duration} seconds'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: Did you exploit Ray parallelism? The duration is too long: 6.006669759750366 seconds"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert squares == [0, 1, 4, 9], f'Did you retrieve the objects using the ids? squares = {squares}'\n",
     "assert duration < 4.1, f'Did you exploit Ray parallelism? The duration is too long: {duration} seconds' "
@@ -470,28 +464,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'NodeID': '584eb2d58f49e7fb7c6a6f8c2608b2b8c646700c',\n",
+       "[{'NodeID': '8e69b35fe14da304ad0b43c53240300fdcfe9936',\n",
        "  'Alive': True,\n",
        "  'NodeManagerAddress': '192.168.1.149',\n",
        "  'NodeManagerHostname': 'DWAnyscaleMBP.local',\n",
-       "  'NodeManagerPort': 50735,\n",
-       "  'ObjectManagerPort': 50774,\n",
-       "  'ObjectStoreSocketName': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/plasma_store',\n",
-       "  'RayletSocketName': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/raylet',\n",
-       "  'Resources': {'object_store_memory': 33.0,\n",
+       "  'NodeManagerPort': 51527,\n",
+       "  'ObjectManagerPort': 51559,\n",
+       "  'ObjectStoreSocketName': '/tmp/ray/session_2020-04-14_10-26-17_415092_86135/sockets/plasma_store',\n",
+       "  'RayletSocketName': '/tmp/ray/session_2020-04-14_10-26-17_415092_86135/sockets/raylet',\n",
+       "  'Resources': {'object_store_memory': 30.0,\n",
        "   'CPU': 8.0,\n",
        "   'node:192.168.1.149': 1.0,\n",
-       "   'memory': 95.0},\n",
+       "   'memory': 87.0},\n",
        "  'alive': True}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,28 +498,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'NodeID': '584eb2d58f49e7fb7c6a6f8c2608b2b8c646700c',\n",
+       "{'NodeID': '8e69b35fe14da304ad0b43c53240300fdcfe9936',\n",
        " 'Alive': True,\n",
        " 'NodeManagerAddress': '192.168.1.149',\n",
        " 'NodeManagerHostname': 'DWAnyscaleMBP.local',\n",
-       " 'NodeManagerPort': 50735,\n",
-       " 'ObjectManagerPort': 50774,\n",
-       " 'ObjectStoreSocketName': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/plasma_store',\n",
-       " 'RayletSocketName': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/raylet',\n",
-       " 'Resources': {'object_store_memory': 33.0,\n",
+       " 'NodeManagerPort': 51527,\n",
+       " 'ObjectManagerPort': 51559,\n",
+       " 'ObjectStoreSocketName': '/tmp/ray/session_2020-04-14_10-26-17_415092_86135/sockets/plasma_store',\n",
+       " 'RayletSocketName': '/tmp/ray/session_2020-04-14_10-26-17_415092_86135/sockets/raylet',\n",
+       " 'Resources': {'object_store_memory': 30.0,\n",
        "  'CPU': 8.0,\n",
        "  'node:192.168.1.149': 1.0,\n",
-       "  'memory': 95.0},\n",
+       "  'memory': 87.0},\n",
        " 'alive': True}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,19 +531,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'object_store_memory': 33.0,\n",
+       "{'object_store_memory': 30.0,\n",
        " 'CPU': 8.0,\n",
        " 'node:192.168.1.149': 1.0,\n",
-       " 'memory': 95.0}"
+       " 'memory': 87.0}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +564,7 @@
        "8.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -602,36 +596,36 @@
       "n:  1, duration:  0.001 seconds\n",
       "n:  2, duration:  0.002 seconds\n",
       "n:  3, duration:  0.002 seconds\n",
-      "n:  4, duration:  0.002 seconds\n",
+      "n:  4, duration:  0.003 seconds\n",
       "n:  5, duration:  0.003 seconds\n",
       "n:  6, duration:  0.004 seconds\n",
       "n:  7, duration:  0.004 seconds\n",
       "n:  8, duration:  0.005 seconds\n",
-      "n:  9, duration:  0.006 seconds\n",
-      "n: 10, duration:  0.006 seconds\n",
+      "n:  9, duration:  0.005 seconds\n",
+      "n: 10, duration:  0.005 seconds\n",
       "n: 11, duration:  0.006 seconds\n",
       "n: 12, duration:  0.006 seconds\n",
       "n: 13, duration:  0.006 seconds\n",
-      "n: 14, duration:  0.007 seconds\n",
-      "n: 15, duration:  0.007 seconds\n",
+      "n: 14, duration:  0.006 seconds\n",
+      "n: 15, duration:  0.006 seconds\n",
       "Calling ray.get:\n",
       "n:  0, duration:  0.000 seconds\n",
-      "n:  1, duration:  1.001 seconds\n",
-      "n:  2, duration:  2.003 seconds\n",
-      "n:  3, duration:  3.001 seconds\n",
-      "n:  4, duration:  4.001 seconds\n",
-      "n:  5, duration:  5.002 seconds\n",
-      "n:  6, duration:  6.003 seconds\n",
-      "n:  7, duration:  7.003 seconds\n",
-      "n:  8, duration:  8.001 seconds\n",
-      "n:  9, duration:  9.005 seconds\n",
-      "n: 10, duration: 10.004 seconds\n",
-      "n: 11, duration: 11.001 seconds\n",
-      "n: 12, duration: 12.001 seconds\n",
+      "n:  1, duration:  1.003 seconds\n",
+      "n:  2, duration:  2.004 seconds\n",
+      "n:  3, duration:  3.005 seconds\n",
+      "n:  4, duration:  4.003 seconds\n",
+      "n:  5, duration:  5.004 seconds\n",
+      "n:  6, duration:  6.005 seconds\n",
+      "n:  7, duration:  7.005 seconds\n",
+      "n:  8, duration:  8.005 seconds\n",
+      "n:  9, duration:  9.004 seconds\n",
+      "n: 10, duration: 10.005 seconds\n",
+      "n: 11, duration: 11.005 seconds\n",
+      "n: 12, duration: 12.004 seconds\n",
       "n: 13, duration: 13.004 seconds\n",
-      "n: 14, duration: 14.003 seconds\n",
-      "n: 15, duration: 15.002 seconds\n",
-      "Total time: duration: 22.015 seconds\n"
+      "n: 14, duration: 14.005 seconds\n",
+      "n: 15, duration: 15.005 seconds\n",
+      "Total time: duration: 22.016 seconds\n"
      ]
     }
    ],
