--- a/ray-core/06-RecapTipsTricks.ipynb
+++ b/ray-core/06-RecapTipsTricks.ipynb
@@ -42,8 +42,13 @@
     "* Invocations return an `ObjectID` for a _future_. Use `ray.get(id)` to return the value.\n",
     "* However, `ray.get()` blocks, so consider using `ray.wait()` when waiting for a collection of futures, so as they become available, you can retrieve them with `ray.get()` (which won't block on available results), then process the results, all while waiting for the rest to finish.\n",
     "* Pick functions to parallelize that do enough work so that the Ray \"remoting\" overhead is not significant. Very short functions will actually yield lower performance if convert to tasks. \n",
-    "* Similarly, avoid too many actors, as each one is pinned to memory until no longer needed.\n",
-    "\n",
+    "* Similarly, avoid too many actors, as each one is pinned to memory until no longer needed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Using Existing Functions and Classes\n",
     "\n",
     "An existing function can be used as a task by defining a new task function that calls. For example:\n",
@@ -81,45 +86,7 @@
     "\n",
     "Note that we added a `get_count()` method, because member attributes can't be accessed directly, in contrast with normal classes.\n",
     "\n",
-    "However, Ray currently doesn't support an actor subclassing another actor. Only regular Python classes can be used.\n",
-    "\n",
-    "### Profiling Code\n",
-    "\n",
-    "\n",
-    "There are two ways to profile performance of a running Ray application:\n",
-    "\n",
-    "\n",
-    "* `ray.timeline(file)` ([documentation](https://ray.readthedocs.io/en/latest/package-ref.html#ray.timeline)). Requires a Chrome web browser to view the data.\n",
-    "* Ray Dashboard profiling ([see below](#Profiling-Actors))\n",
-    "\n",
-    "The Ray Dashboard method is more convenient, but it has a limitation discussed below.\n",
-    "\n",
-    "To use the `ray.timeline(file)` approach, run it as follows:\n",
-    "\n",
-    "```\n",
-    "ray.timeline('timeline.txt')\n",
-    "my_long_task.remote(...)\n",
-    "```\n",
-    "\n",
-    "Then, open chrome://tracing in the Chrome web browser (only Chrome is supported) and click the _load_ button to load the file. To zoom in or out, click the asymmetric up-down arrow button. To move around, click the crossed arrow and drag a section in view. Click on a box in the timeline to see details about it. \n",
-    "\n",
-    "Look for blocks corresponding to long-running tasks and look for idle periods, which reflect processing down outside the context of Ray.\n",
-    "\n",
-    "\n",
-    "### Using Libraries\n",
-    "\n",
-    "If tasks or actors call (or subclass) library code in your project and that code isn't in a subdirectory of the driver, make sure that the process starting Ray has the correct `PYTHONPATH` set to the library location. For example,\n",
-    "\n",
-    "```python\n",
-    "PYTHONPATH=$PYTHONPATH:/path/to/library python MyRayAppDriver.py\n",
-    "```\n",
-    "\n",
-    "### Cleaning Up Actors\n",
-    "\n",
-    "Working in a constrained environment, you my find it useful to kill actors that are no longer needed, but still have references to them, such as in notebooks. More information is in the docs for [ray.kill()](https://ray.readthedocs.io/en/latest/package-ref.html#ray.kill).\n",
-    "\n",
-    "* `ray.kill(actor_id)`: Terminate abruptly\n",
-    "* `actor_id.__ray_terminate__.remote()`: Clean up with a nicer termination"
+    "However, Ray currently doesn't support an actor subclassing another actor. Only regular Python classes can be used."
    ]
   },
   {
@@ -138,13 +105,84 @@
     "\n",
     "The _Logical View_ offers a powerful and convenient way to profile actor performance using [flame graphs](http://www.brendangregg.com/flamegraphs.html). Details are in the [Dashboard docs](https://ray.readthedocs.io/en/latest/ray-dashboard.html#ray-dashboard).\n",
     "\n",
-    "Unfortunately, you may be asked to enter the `sudo` password to use this feature, because of the way it instruments processes. Currently, the only way to get this to work with the Dashboard is to use _passwordless sudo_. On MacOS and Linux systems, it should be sufficient to add a line like the following the `/etc/sudoers` (edited using `sudo visudo`!):\n",
+    "This feature uses [py-spy](https://github.com/benfred/py-spy) to instrument and profile the application. Unfortunately, you may be asked to enter the `sudo` password to use this feature, because of the way it instruments processes. Currently, the only way to get this to work with the Dashboard launched from notebooks is to use _passwordless sudo_. On MacOS and Linux systems, it should be sufficient to add a line like the following the `/etc/sudoers` (edited using `sudo visudo`!):\n",
     "\n",
     "```\n",
     "yourusername ALL = (ALL) NOPASSWD: ALL\n",
     "```\n",
     "\n",
-    "Carefully the consider the security implications of this change!!"
+    "Carefully the consider the security implications of this change!!\n",
+    "\n",
+    "The alternative is to run your Python application from a command line, then open the Dashboard. When you click a link to profile code, as discussed next, you'll be prompted for your password in the terminal. (The prompt could get mixed with other output from the program.) Enter your password there and the profiling will continue.\n",
+    "\n",
+    "Using either approach, to profile with the Dashboard, click the _Logical View_ tab. It shows a list of actors that have been run or are running. Find the running actor that appears to be the one you want to profile. You'll see a line like this:\n",
+    "\n",
+    "> Actor <hex_number> (Profile for 10s 30s 60s) Kill Actor\n",
+    "\n",
+    "The _10s, 30s, 60s_ are links. Click the time you want (pick one that's shorter than the remaining execution time). \n",
+    "\n",
+    "When it finishes, click _Profile results_. A new tab opens with the _speedscope_ view of the data, which shows a flame graph. You can learn more about navigating and using this tool at the [speedscope GitHub site](https://github.com/jlfwong/speedscope)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A lot of the data will be related to actor messaging and not normally interesting. Look at the following screen shot, cropped from a screen shot in [lesson 4]():\n",
+    "\n",
+    "![Conway's GoL Flame Graph](../images/ConwaysGameOfLife-FlameGraph-crop.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the arrow and pagination on the upper-right hand side. Sometimes navigating pages will take you to interesting data. Alto, the _Left Heavy_ button on the upper-left hand side is clicked, so the view is zoomed into the interesting data about the `step()` method profiled here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Profiling Code with ray.timeline()\n",
+    "\n",
+    "The other built-in way to profile performance uses `ray.timeline(file)` ([documentation](https://ray.readthedocs.io/en/latest/package-ref.html#ray.timeline)). It requires a Chrome web browser to view the data. This is the only way to profile tasks.\n",
+    "\n",
+    "Use it as follows:\n",
+    "\n",
+    "```\n",
+    "ray.timeline('timeline.txt')\n",
+    "my_long_task.remote(...)  # task to profile\n",
+    "```\n",
+    "\n",
+    "Then, open chrome://tracing in the Chrome web browser (only Chrome is supported) and click the _load_ button to load the file. To zoom in or out, click the asymmetric up-down arrow button. To move around, click the crossed arrow and drag a section in view. Click on a box in the timeline to see details about it. \n",
+    "\n",
+    "Look for blocks corresponding to long-running tasks and look for idle periods, which reflect processing outside the context of Ray."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Libraries\n",
+    "\n",
+    "If tasks or actors call (or subclass) library code in your project and that code isn't in a subdirectory of the driver, make sure that the process starting Ray has the correct `PYTHONPATH` set to the library location. For example,\n",
+    "\n",
+    "```python\n",
+    "PYTHONPATH=$PYTHONPATH:/path/to/library python MyRayAppDriver.py\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning Up Actors\n",
+    "\n",
+    "Working in a constrained environment, you my find it useful to kill actors that are no longer needed, but still have references to them, such as in notebooks. More information is in the docs for [ray.kill()](https://ray.readthedocs.io/en/latest/package-ref.html#ray.kill).\n",
+    "\n",
+    "* `ray.kill(actor_id)`: Terminate abruptly\n",
+    "* `actor_id.__ray_terminate__.remote()`: Clean up with a nicer termination"
    ]
   },
   {
@@ -160,15 +198,6 @@
     "### Annoyances\n",
     "\n",
     "If `ray.init()` worked (for example, you see a message like _View the Ray dashboard at localhost:8265_) and you're using a Mac, you may get several annoying dialogs asking you if you want to allow incoming connections for `python` and/or `redis-server`. Click \"Accept\" for each one and they shouldn't appear again during this lesson. MacOS is trying to verify if these executables have been properly signed. Ray uses Redis. If you installed Python using Anaconda or other mechanism, then it probably isn't properly signed from the point of view of MacOS. To permanently fix this problem, [see this StackExchange post](https://apple.stackexchange.com/questions/3271/how-to-get-rid-of-firewall-accept-incoming-connections-dialog)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Thank You!\n",
-    "\n",
-    "Thanks for going through this tutorial."
    ]
   }
  ],
